Fri May  6 14:20:44 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/modeling_tests.lst:

          Fixed malformed test list entry.

Wed May  4 13:28:46 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/testdata/PolicyLib/DefaultPolicyLibTest.opendds:

          Added missing Period references.

Wed May  4 12:50:21 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/part/OpenDDSDiagramDomainModelWizardPage.java:

          Restrict characters for model name to be valid C++ identifier characters
          since model name is used as part of export macro in tao_idl generated code.

Wed May  4 03:58:12 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/modeling_tests.lst:

          don't execute looped test.

Tue May  3 22:32:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Fixed a logging message.

        * tools/modeling/codegen/model/Application.h:
        * tools/modeling/codegen/model/Application.cpp:
        * tools/modeling/codegen/model/Delegate.cpp:
        * tools/modeling/codegen/model/Service_T.cpp:

          Use DomainParticipantFactory_var to avoid leaking references.

Tue May  3 22:18:00 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/StockQuoter/subscriber.cpp:

          Signal read cond sync when all messages received.

Tue May  3 19:14:37 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/idl.xsl:

          Remove xsl:message for debugging.

Tue May  3 18:41:55 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/idl.xsl:

          Fix module name as only case-different from field name - don't output
          qualified name when in same module.
